--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -104,6 +104,19 @@
                       σε θέματα Πολιτικής Συνοχής της Ευρωπαϊκής Ένωσης, Επιχειρησιακού Σχεδιασμού και Αστικής Ανάπτυξης.</p>
                     </div>
                 </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/ndamianos.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Νίκος Δαμιανός</h3>
+                      <p class="weekends-mentor-bio small">Ο Νίκος Δαμιανός είναι Αντιπρόεδρος στη Link Technologies Α.Ε, και μέλος του Διοικητικού Συμβουλίου. Έχει τρέξει πολλαπλά έργα ITS
+                      στην Ελλάδα αλλά και στο εξωτερικό, όπως το έργο "Παρακολούθηση Στόλου και Ενημέρωση Επιβατών" για το
+                      συγκοινωνιακό οργανισμό λεωφορείων SM στη Σεμπού, Φιλιππίνες, και "Παρακολούθηση Στόλου, Ενημέρωση Επιβατών, και Αυτόματο
+                      Σύστημα Φαναριών" για τον οργανισμό BRT στη Μπανγκόκ,Ταϊλάνδη. Ταυτόχρονα δραστηριοποιείται στο χώρο της έρευνας,
+                      οργανώνοντας διεθνείς κοινοπραξίες για Ευρωπαϊκά έργα.</p>
+                    </div>
+                </div>
                 <div id="schedule">
                     <h2>Πρόγραμμα</h2>
                     <button class="accordion weekends-schedule-header" id="red">Παρασκευή 28 Σεπτεμβρίου</button>
@@ -143,34 +156,28 @@
                        <div class="panel-inner">
                         <div class="weekends-schedule-content">
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">9:30am</div>
+                                <div class="weekends-schedule-content-item-time">9:30πμ</div>
                                 <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωινό</div>
-                                <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-time">6:30πμ</div>
                                 <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
-                                <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-time">6:30πμ</div>
                                 <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
-                                <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
                             </div>
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">6:30pm</div>
                                 <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
-                                <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
                             </div>
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">6:30pm</div>
                                 <div class="weekends-schedule-content-item-what">Voting</div>
-                                <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
                             </div>
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">6:30pm</div>
                                 <div class="weekends-schedule-content-item-what">Form Teams</div>
-                                <div class="weekends-schedule-content-item-text">Dinner</div>
                             </div>
                         </div>
                       </div>
