add Saturday's schedule

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -156,28 +156,32 @@
                        <div class="panel-inner">
                         <div class="weekends-schedule-content">
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">9:30πμ</div>
+                                <div class="weekends-schedule-content-item-time">10:00πμ</div>
                                 <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωινό</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30πμ</div>
-                                <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
+                                <div class="weekends-schedule-content-item-time">11:00πμ</div>
+                                <div class="weekends-schedule-content-item-what">Σχεδιασμός λύσης</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30πμ</div>
-                                <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
+                                <div class="weekends-schedule-content-item-time">12:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Συζήτηση με τους μέντορες</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
+                                <div class="weekends-schedule-content-item-time">2:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Γεύμα</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Voting</div>
+                                <div class="weekends-schedule-content-item-time">3:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Υλοποίηση λύσης</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Form Teams</div>
+                                <div class="weekends-schedule-content-item-time">7:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Ελαφρύ δείπνο</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">10:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Λήξη ημέρας</div>
                             </div>
                         </div>
                       </div>
