add Sunday's schedule

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -157,7 +157,7 @@
                         <div class="weekends-schedule-content">
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">10:00πμ</div>
-                                <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωινό</div>
+                                <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωϊνό</div>
                             </div>
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">11:00πμ</div>
@@ -191,34 +191,36 @@
                        <div class="panel-inner">
                         <div class="weekends-schedule-content">
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Προσέλευση</div>
-                                <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
+                                <div class="weekends-schedule-content-item-time">10:00πμ</div>
+                                <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωϊνό</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
-                                <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
+                                <div class="weekends-schedule-content-item-time">11:00πμ</div>
+                                <div class="weekends-schedule-content-item-what">Υλοποίηση λύσης</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
-                                <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
+                                <div class="weekends-schedule-content-item-time">12:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Συζήτηση με τους μέντορες</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
-                                <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
+                                <div class="weekends-schedule-content-item-time">2:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Γεύμα</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Voting</div>
-                                <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
+                                <div class="weekends-schedule-content-item-time">3:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Προετοιμασία τελικής παρουσίασης</div>
                             </div>
                             <div class="weekends-schedule-content-item">
-                                <div class="weekends-schedule-content-item-time">6:30pm</div>
-                                <div class="weekends-schedule-content-item-what">Form Teams</div>
-                                <div class="weekends-schedule-content-item-text">Dinner</div>
+                                <div class="weekends-schedule-content-item-time">5:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Τελική παρουσίαση</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">7:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Ελαφρύ δείπνο</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">8:00μμ</div>
+                                <div class="weekends-schedule-content-item-what">Τελετή λήξης</div>
                             </div>
                         </div>
                       </div>
