--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -14,7 +14,7 @@
                         <li><a href="#schedule">Πρόγραμμα</a></li>
                         <li><a href="#judges">Κριτές</a></li>
                         <li><a href="#prizes">Έπαθλα</a></li>
-                        <li><a href="#sponsors">Σπόνσορες</a></li>
+                        <li><a href="#sponsors">Χορηγοί</a></li>
                         <li><a href="#register">Εγγραφή</a></li>
                     </ol>
                 </div>
@@ -230,10 +230,10 @@
                     </div>
                 </div>
               <div id="judges">
-               <h2>Judges</h2>
+               <h2>Κριτές</h2>
               </div>
               <div id="prizes">
-               <h2>Prizes</h2>
+               <h2>Βραβεία</h2>
                     <ul>
                         <li>1<sup>ο</sup> Βραβείο – 1000€</li>
                         <li>2<sup>ο</sup> Βραβείο – 500€</li>
@@ -250,7 +250,10 @@
                     </ul>
                 </div>
               <div id="sponsors">
-               <h2>Sponsors</h2>
+               <h2>Χορηγοί</h2>
+               <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/OSETH-logo.png">
+               <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/link-logo.png">
+               <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/okthess-logo.png">
               </div>
               <div class="form" id="register">
                   <form action="{% url 'main:weekends' %}" method="post">
