--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -43,14 +43,16 @@
                 </div>
                 <br>
               <div id="mentors">
-               <h2>Mentors</h2>
+               <h2>Μέντορες</h2>
                  <div class="weekends-mentor-container">
                     <div class="col-md-2 weekends-mentor">
                      <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/jmsalanova.jpg">
                     </div>
                     <div class="col-md-10">
-                      <h3>Josep Maria Salanova</h3>
-                      <p class="weekends-mentor-bio small">Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
+                      <h3>Josep Maria Salanova</h3></br>
+                      <h4>Πολιτικός Μηχανικός U.P.C.</h4></br>
+                      <a href="#coach-1" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-1" class="weekends-mentor-bio small collapse">Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
                       Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
                       (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
                       taxicab fleets in urban environment». Το 2017 ολοκλήρωσε το Data Science Specialization στο Johns Hopkins University. Εργάζεται ως Ερευνητής Γ
@@ -62,20 +64,23 @@
                 </div>
                 <div class="weekends-mentor-container">
                     <div class="col-md-2 weekends-mentor">
-                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/ssalem.jpg">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/jmsalanova.jpg">
                     </div>
                     <div class="col-md-10">
-                      <h3>Σάμουελ Αλέξιος Σαλέμ</h3>
-                      <p class="weekends-mentor-bio small">Ο Σάμουελ Αλέξιος Σαλέμ είναι Πολιτικός Μηχανικός - Συγκοινωνιολόγος ειδικευμένος σε συγκοινωνιακά και περιβαλλοντικά θέματα. Οι τομείς με τους οποίους ασχολείται είναι του
-                      στρατηγικού σχεδιασμού, της ανάλυσης δεδομένων και των περιβαλλοντικών επιπτώσεων συγκοινωνιακών έργων. Απέκτησε το πτυχίο του πολιτικού μηχανικού στο Α.Π.Θ. (2002)
-                      ενώ έχει και δύο μεταπτυχιακά, ένα στην προστασία περιβάλλοντος και τη βιώσιμη ανάπτυξη από το Α.Π.Θ. και ένα στα συγκοινωνιακά από το πανεπιστήμιο του
-                      Southampton, UK. Έχει δουλέψει τρία χρόνια στο Ηνωμένο Βασίλειο (2006-2009) σε κοινοπραξία εταιριών συμβούλων μηχανικών (MottGifford) που είχε το συμβόλαιο για την
-                      παροχή υπηρεσιών συμβούλου στρατηγικού και επιχειρησιακού σχεδιασμού κυκλοφοριακών έργων στην κομητεία του Hampshire. Την τριετία 2009-2012 εργάσθηκε
-                      σαν ειδικός συνεργάτης – σύμβουλος σε περιβαλλοντικά και συγκοινωνιακά θέματα για το Δήμο Βέροιας. Έχει εργασθεί σε πληθώρα Ευρωπαϊκών έργων από το 7 ο πλαίσιο στήριξης
-                      και έπειτα (NODES, T-TRANS, RAIL4SEE, FLOW, SUMPS-UP) ενώ έχει κατά καιρούς συνεργασθεί με το Ινστιτούτο Μεταφορών (ΙΜΕΤ) και το ΤΕΙ Θεσσαλίας ως εξωτερικός
-                      συνεργάτης σε εθνικά, περιφερειακά και ευρωπαϊκά προγράμματα. Από το 2013 εργάζεται για το πρώην Συμβούλιο Αστικών Συγκοινωνιών Θεσσαλονίκης (ΣΑΣΘ) νυν Οργανισμού
-                      Συγκοινωνιακού Έργου Θεσσαλονίκης που είναι επιφορτισμένος με τη σχεδιασμό και την εποπτεία λειτουργίας των Δημοσίων Συγκοινωνιών στην Μητροπολιτική Περιφέρεια
-                      Θεσσαλονίκης παρέχοντας υπηρεσίες συγκοινωνιολόγου μηχανικού</p>
+                      <h3>Σάμουελ Αλέξιος Σαλέμ</h3></br>
+                      <h4>Πολιτικός Μηχανικός – Συγκοινωνιολόγος</h4></br>
+                      <a href="#coach-2" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-2" class="weekends-mentor-bio small collapse">Ο Σάμουελ Αλέξιος Σαλέμ είναι Πολιτικός Μηχανικός - Συγκοινωνιολόγος ειδικευμένος σε συγκοινωνιακά και περιβαλλοντικά θέματα. Οι τομείς με τους οποίους ασχολείται είναι του
+                      στρατηγικού σχεδιασμού, της ανάλυσης δεδομένων και των περιβαλλοντικών επιπτώσεων συγκοινωνιακών έργων<span id="dots">...</span><span id="more-2">
+                        Απέκτησε το πτυχίο του πολιτικού μηχανικού στο Α.Π.Θ. (2002)
+                        ενώ έχει και δύο μεταπτυχιακά, ένα στην προστασία περιβάλλοντος και τη βιώσιμη ανάπτυξη από το Α.Π.Θ. και ένα στα συγκοινωνιακά από το πανεπιστήμιο του
+                        Southampton, UK. Έχει δουλέψει τρία χρόνια στο Ηνωμένο Βασίλειο (2006-2009) σε κοινοπραξία εταιριών συμβούλων μηχανικών (MottGifford) που είχε το συμβόλαιο για την
+                        παροχή υπηρεσιών συμβούλου στρατηγικού και επιχειρησιακού σχεδιασμού κυκλοφοριακών έργων στην κομητεία του Hampshire. Την τριετία 2009-2012 εργάσθηκε
+                        σαν ειδικός συνεργάτης – σύμβουλος σε περιβαλλοντικά και συγκοινωνιακά θέματα για το Δήμο Βέροιας. Έχει εργασθεί σε πληθώρα Ευρωπαϊκών έργων από το 7 ο πλαίσιο στήριξης
+                        και έπειτα (NODES, T-TRANS, RAIL4SEE, FLOW, SUMPS-UP) ενώ έχει κατά καιρούς συνεργασθεί με το Ινστιτούτο Μεταφορών (ΙΜΕΤ) και το ΤΕΙ Θεσσαλίας ως εξωτερικός
+                        συνεργάτης σε εθνικά, περιφερειακά και ευρωπαϊκά προγράμματα. Από το 2013 εργάζεται για το πρώην Συμβούλιο Αστικών Συγκοινωνιών Θεσσαλονίκης (ΣΑΣΘ) νυν Οργανισμού
+                        Συγκοινωνιακού Έργου Θεσσαλονίκης που είναι επιφορτισμένος με τη σχεδιασμό και την εποπτεία λειτουργίας των Δημοσίων Συγκοινωνιών στην Μητροπολιτική Περιφέρεια
+                        Θεσσαλονίκης παρέχοντας υπηρεσίες συγκοινωνιολόγου μηχανικού</p>
                     </div>
                 </div>
                 <div class="weekends-mentor-container">
@@ -83,14 +88,16 @@
                      <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/chvizmpa.jpg">
                     </div>
                     <div class="col-md-10">
-                      <h3>Χρύσα Βίζμπα</h3>
-                      <p class="weekends-mentor-bio small">H κα. Χρύσα Βίζμπα είναι Τοπογράφος Μηχανικός – Συγκοινωνιολόγος με εξειδίκευση σε συγκοινωνιακά και περιβαλλοντικά ζητήματα. Οι βασικοί τομείς ενασχόλησής της είναι ο
+                      <h3>Χρύσα Βίζμπα</h3></br>
+                      <h4>Τοπογράφος Μηχανικός – Συγκοινωνιολόγος</h4></br>
+                      <a href="#coach-3" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-3" class="weekends-mentor-bio small collapse">H κα. Χρύσα Βίζμπα είναι Τοπογράφος Μηχανικός – Συγκοινωνιολόγος με εξειδίκευση σε συγκοινωνιακά και περιβαλλοντικά ζητήματα. Οι βασικοί τομείς ενασχόλησής της είναι ο
                       στρατηγικός σχεδιασμός και η ανάλυση δεδομένων συγκοινωνιακών έργων και συστημάτων μεταφορών. Έχει πτυχίο Αγρονόμου –Τοπογράφου Μηχανικού (2007) και δύο
-                      μεταπτυχιακούς τίτλους σπουδών, στην προστασία περιβάλλοντος και βιώσιμη ανάπτυξη (2008) και στο σχεδιασμό συστημάτων μεταφορών (2009). Εργάστηκε σε εταιρίες
-                      συμβούλων από το 2007 ενώ από το 2010 εργαζόταν στο Συμβούλιο Αστικών Συγκοινωνιών Θεσσαλονίκης (ΣΑΣΘ), νυν Οργανισμός Συγκοινωνιακού Έργου Θεσσαλονίκης (ΟΣΕΘ).
-                      Εξειδικεύεται σε θέματα βιώσιμης αστικής κινητικότητας, σχεδιασμό και εποπτεία δημόσιων συγκοινωνιακών συστημάτων μεταφορών, έξυπνα συστήματα μεταφορών,
-                      έρευνες και ανάλυση δεδομένων, μέσα σταθερής τροχιάς, ποιότητα δημοσίων μεταφορών. Έχει επίσης εργαστεί σε πληθώρα συγχρηματοδοτούμενων και μη εθνικών και ευρωπαϊκών
-                      έργων και προγραμμάτων (EPTA, ECOTALE, ATTAC, SUMPs- Up, SUNRISE, CIVITAS κα).</p>
+                        μεταπτυχιακούς τίτλους σπουδών, στην προστασία περιβάλλοντος και βιώσιμη ανάπτυξη (2008) και στο σχεδιασμό συστημάτων μεταφορών (2009). Εργάστηκε σε εταιρίες
+                        συμβούλων από το 2007 ενώ από το 2010 εργαζόταν στο Συμβούλιο Αστικών Συγκοινωνιών Θεσσαλονίκης (ΣΑΣΘ), νυν Οργανισμός Συγκοινωνιακού Έργου Θεσσαλονίκης (ΟΣΕΘ).
+                        Εξειδικεύεται σε θέματα βιώσιμης αστικής κινητικότητας, σχεδιασμό και εποπτεία δημόσιων συγκοινωνιακών συστημάτων μεταφορών, έξυπνα συστήματα μεταφορών,
+                        έρευνες και ανάλυση δεδομένων, μέσα σταθερής τροχιάς, ποιότητα δημοσίων μεταφορών. Έχει επίσης εργαστεί σε πληθώρα συγχρηματοδοτούμενων και μη εθνικών και ευρωπαϊκών
+                        έργων και προγραμμάτων (EPTA, ECOTALE, ATTAC, SUMPs- Up, SUNRISE, CIVITAS κα).</p>
                     </div>
                 </div>
                 <div class="weekends-mentor-container">
@@ -98,12 +105,14 @@
                      <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/emanos.jpg">
                     </div>
                     <div class="col-md-10">
-                      <h3>Ευστράτιος Μάνος</h3>
-                      <p class="weekends-mentor-bio small">Αρχιτέκτων - Πολεοδόμος, MSc Περιβαλλοντικού Σχεδιασμού, εμπειρογνώμονας σε θέματα Ολοκληρωμένης Αστικής Ανάπτυξης και χρηματοοικονομικής μηχανικής για την Αστική Ανάπτυξη,
+                      <h3>Ευστράτιος Μάνος</h3></br>
+                      <h4>Αρχιτέκτων - Πολεοοδόμος</h4></br>
+                      <a href="#coach-4" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-4" class="weekends-mentor-bio small collapse">Αρχιτέκτων - Πολεοδόμος, MSc Περιβαλλοντικού Σχεδιασμού, εμπειρογνώμονας σε θέματα Ολοκληρωμένης Αστικής Ανάπτυξης και χρηματοοικονομικής μηχανικής για την Αστική Ανάπτυξη,
                       την Χωρική Ανάπτυξη και την Ευρωπαϊκή Εδαφική Συνεργασία. Αποτελεί ιδρυτικό μέλος του Κοινωνικού Καταναλωτικού Συνεταιρισμού BIOSCOOP στην Θεσσαλονίκη και μέλος του Εποπτικού του Συμβουλίου. Ως μέλος της Μόνιμης
-                      Επιτροπής Ανταγωνιστικότητας, Επιχειρηματικότητας και Καινοτομίας του ΤΕΕ, τμήμα Κεντρικής Μακεδονίας, προωθεί την νέα και καινοτόμα επιχειρηματικότητα, η οποία κυρίως λαμβάνει χώρα σε αστικά περιβάλλοντα.
-                      Ως Πιστοποιημένος Ενεργειακός Επιθεωρητής, ενδιαφέρεται για την προώθηση της εξοικονόμησης ενέργειας και των ΑΠΕ. Είναι Πιστοποιημένος Εκπαιδευτής Ενηλίκων στο Εθνικό Κέντρο Δημόσιας Διοίκησης και Αυτοδιοίκησης (ΕΚΔΔΑ),
-                      σε θέματα Πολιτικής Συνοχής της Ευρωπαϊκής Ένωσης, Επιχειρησιακού Σχεδιασμού και Αστικής Ανάπτυξης.</p>
+                        Επιτροπής Ανταγωνιστικότητας, Επιχειρηματικότητας και Καινοτομίας του ΤΕΕ, τμήμα Κεντρικής Μακεδονίας, προωθεί την νέα και καινοτόμα επιχειρηματικότητα, η οποία κυρίως λαμβάνει χώρα σε αστικά περιβάλλοντα.
+                        Ως Πιστοποιημένος Ενεργειακός Επιθεωρητής, ενδιαφέρεται για την προώθηση της εξοικονόμησης ενέργειας και των ΑΠΕ. Είναι Πιστοποιημένος Εκπαιδευτής Ενηλίκων στο Εθνικό Κέντρο Δημόσιας Διοίκησης και Αυτοδιοίκησης (ΕΚΔΔΑ),
+                        σε θέματα Πολιτικής Συνοχής της Ευρωπαϊκής Ένωσης, Επιχειρησιακού Σχεδιασμού και Αστικής Ανάπτυξης.</p>
                     </div>
                 </div>
                 <div class="weekends-mentor-container">
@@ -111,8 +120,10 @@
                      <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/ndamianos.jpg">
                     </div>
                     <div class="col-md-10">
-                      <h3>Νίκος Δαμιανός</h3>
-                      <p class="weekends-mentor-bio small">Ο Νίκος Δαμιανός είναι Αντιπρόεδρος στη Link Technologies Α.Ε, και μέλος του Διοικητικού Συμβουλίου. Έχει τρέξει πολλαπλά έργα ITS
+                      <h3>Νίκος Δαμιανός</h3></br>
+                      <h4>Αντιπρόεδρος Link Technologies A.E.</h4></br>
+                      <a href="#coach-5" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-5" class="weekends-mentor-bio small collapse">Ο Νίκος Δαμιανός είναι Αντιπρόεδρος στη Link Technologies Α.Ε, και μέλος του Διοικητικού Συμβουλίου. Έχει τρέξει πολλαπλά έργα ITS
                       στην Ελλάδα αλλά και στο εξωτερικό, όπως το έργο "Παρακολούθηση Στόλου και Ενημέρωση Επιβατών" για το
                       συγκοινωνιακό οργανισμό λεωφορείων SM στη Σεμπού, Φιλιππίνες, και "Παρακολούθηση Στόλου, Ενημέρωση Επιβατών, και Αυτόματο
                       Σύστημα Φαναριών" για τον οργανισμό BRT στη Μπανγκόκ,Ταϊλάνδη. Ταυτόχρονα δραστηριοποιείται στο χώρο της έρευνας,
@@ -121,6 +132,7 @@
                 </div>
               </div>
               <div id="schedule">
+               </br></br>
                     <h2>Πρόγραμμα</h2>
                     <button class="accordion weekends-schedule-header" id="red">Παρασκευή 28 Σεπτεμβρίου</button>
                      <div class="panel">
@@ -230,9 +242,11 @@
                     </div>
                 </div>
               <div id="judges">
+               </br></br>
                <h2>Κριτές</h2>
               </div>
               <div id="prizes">
+               </br></br>
                <h2>Βραβεία</h2>
                     <ul>
                         <li>1<sup>ο</sup> Βραβείο – 1000€</li>
@@ -250,6 +264,7 @@
                     </ul>
                 </div>
               <div id="sponsors">
+               </br></br>
                <h2>Χορηγοί</h2>
                <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/OSETH-logo.png">
                <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/link-logo.png">
@@ -259,7 +274,7 @@
                   <form action="{% url 'main:weekends' %}" method="post">
                       {% csrf_token %}
                       {{ form.non_field_errors }}
-
+                      </br></br>
                       <h4>Αίτηση συμμετοχής</h4>
                       <div class="form-group">
                           <label for="id_first_name">
@@ -289,7 +304,7 @@
                           <label for="id_accept_terms">
                               Αποδέχομαι τους όρους των διοργανωτών
                           </label>
-                          <input type="checkbox" name="accept_terms" class="form-control" required="required" id="id_accept_terms">
+                        <input type="checkbox" name="accept_terms" class="form-control" required="required" id="id_accept_terms">
                       </div>
                       <button id="register" type="submit" class="btn-form" onclick="ga('send', 'event', 'weekend', 'submission', {'NonInteraction': 1});">{% trans 'Submit' %}</button>
                       <script type="text/javascript">
