style "accept terms" checkbox

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1446,8 +1446,16 @@ button.accordion#blue:after{
   color: #4a4a4a;
 }
 
-.form-control#id_accept_terms {
-  text-align: left !important;
+.regular-checkbox {
+	-webkit-appearance: none;
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 9px;
+  vertical-align: text-bottom;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
 }
 
 /*.weekends-schedule-content-item-text {
